# utar

./: CMakeLists.txt  build.sh  clean.sh  conanfile.txt  tests.cmake
3p/bzip2/: CMakeLists.txt
3p/zlib/: CMakeLists.txt
cmake/: utarConfig.cmake.in
export/utar/: error.hpp  exports.h  file.hpp  types.hpp  version.hpp
include/utar/: error-int.hpp  error.hpp
src/utar/: error.cpp  file.cpp  version.cpp
tests/: defs.h  exports.c  file.cpp  suites.h
tests/install/: CMakeLists.txt  test.sh
